--- a/Index.html
+++ b/Index.html
@@ -240,11 +240,11 @@
         <table>
             <thead>
                 <tr>
-                    <th>Tên</th>
+                    <th>STT<th>
+                    <th>Họ Và Tên</th>
                     <th>Chức Vụ</th>
                     <th>Số Điện Thoại</th>
                     <th>Giới Tính</th>
-                    <th>ID Thẻ</th>
                     <th>Quyền</th>
                     <th>Hành Động</th>
                 </tr>
