--- a/Index.html
+++ b/Index.html
@@ -240,7 +240,7 @@
         <table>
             <thead>
                 <tr>
-                    <th>STT<th>
+                    <th>ID Thẻ<th>
                     <th>Họ Và Tên</th>
                     <th>Chức Vụ</th>
                     <th>Số Điện Thoại</th>
