--- a/Index.html
+++ b/Index.html
@@ -240,7 +240,7 @@
         <table>
             <thead>
                 <tr>
-                    <th>ID Thẻ<th>
+                    <th>ID Thẻ</th>
                     <th>Họ Và Tên</th>
                     <th>Chức Vụ</th>
                     <th>Số Điện Thoại</th>
@@ -252,8 +252,7 @@
             <tbody id="employee-table-body">
                 <!-- Dữ liệu từ Firebase sẽ được thêm vào đây -->
             </tbody>
-        </table>
-        
+        </table  
     </div>
     <div id="notification-page" class="page">
         <h2>Thông Báo</h2>
