--- a/Index.html
+++ b/Index.html
@@ -252,7 +252,7 @@
             <tbody id="employee-table-body">
                 <!-- Dữ liệu từ Firebase sẽ được thêm vào đây -->
             </tbody>
-        </table  
+        </table>  
     </div>
     <div id="notification-page" class="page">
         <h2>Thông Báo</h2>
